@@ -1,0 +1,22 @@
+<?php
+	/**
+	*	Placeto CMS - DNS
+	*		Emulates a DNS with subdomains and redirects them to a specified page.
+	*
+	*	Author: Benjamin Jay Young
+	*		http://www.blahertech.org/projects/placeto
+	*
+	*	Placeto Mod - DNS (C) BlaherTech - Benjamin Jay Young 2009
+    *	Placeto Mods are released under the GNU GPL 3.0 and is free and open source.
+	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
+	**/
+
+	$mods['dns']=array
+	(
+		'name'=>'DNS',
+		'author'=>'Benjamin Jay Young',
+		'version'=>'1.0',
+		'description'=>'Emulator to redirect sub domains to certain pages.',
+		'release'=>'2009-09-17'
+	);
+?>
