@@ -1,0 +1,22 @@
+<?php
+	/**
+	*	Placeto CMS - GZip
+	*		Compresses the page in Gzip format.
+	*
+	*	Author: Benjamin Jay Young
+	*		http://www.blahertech.org/projects/placeto
+	*
+	*	Placeto Mod - Gzip (C) BlaherTech - Benjamin Jay Young 2009
+    *	Placeto Mods are released under the GNU GPL 3.0 and is free and open source.
+	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
+	**/
+
+	$mods['gzip']=array
+	(
+		'name'=>'Gzip Support',
+		'author'=>'Benjamin Jay Young',
+		'version'=>'1.0',
+		'description'=>'Gzip your site to save banwidth and speed. It will gzip only necessary files, while keeping your binaries and images entact.',
+		'release'=>'2009-11-15'
+	);
+?>
