@@ -1,0 +1,53 @@
+<?php
+	/**
+	*	Placeto CMS - GZip
+	*		Compresses the page in Gzip format.
+	*
+	*	Author: Benjamin Jay Young
+	*		http://www.blahertech.org/projects/placeto
+	*
+	*	Placeto Mod - Gzip (C) BlaherTech - Benjamin Jay Young 2009
+    *	Placeto Mods are released under the GNU GPL 3.0 and is free and open source.
+	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
+	**/
+
+	//for external files
+	function placeto_extension_gzip($ext)
+	{
+		//list of supported file types
+		$exts=array(
+			'.css'=>TRUE,
+			'.js'=>TRUE,
+			'.htm'=>TRUE,
+			'.html'=>TRUE,
+			'.shtml'=>TRUE,
+			'.xml'=>TRUE,
+			'.txt'=>TRUE
+		);
+		if ($exts[$ext])
+		{
+			//yes
+			unset($exts, $ext);
+			return TRUE;
+		}
+		else
+		{
+			//no
+			unset($exts, $ext);
+			return FALSE;
+		}
+	}
+	
+	//check your footing before you continue
+	$extension=strchr($location, '.');
+	if (!$nf || placeto_extension_gzip($extension))
+	{
+		//check user support and ignore cache var
+		if (substr_count($_SERVER['HTTP_ACCEPT_ENCODING'], 'gzip') && $content['igcache']!==1)
+		{
+			//zip it, zip it good
+			$gztrue=true;
+			ob_start('ob_gzhandler');
+		}
+	}
+?>
