@@ -1,0 +1,15 @@
+<?php
+	/**
+	*	Placeto CMS - GZip
+	*		Compresses the page in Gzip format.
+	*
+	*	Author: Benjamin Jay Young
+	*		http://www.blahertech.org/projects/placeto
+	*
+	*	Placeto Mod - Gzip (C) BlaherTech - Benjamin Jay Young 2009
+    *	Placeto Mods are released under the GNU GPL 3.0 and is free and open source.
+	*	You may edit or distrubute any Placeto Mod at your own free will, with the proper accreditation.
+	**/
+
+	function placeto_extension_gzip($ext){} // Checks for valid files that gzip will be good for.
+?>
